--- a/css/main.css
+++ b/css/main.css
@@ -5718,6 +5718,8 @@ p { font-family: "Open Sans"; color: #000000; font-size: 1.8rem; font-weight: 40
 
 .link--tologin:hover { color: #231F20; }
 
+.link--search { display: none; }
+
 .link--add { font-size: 1.8rem; font-weight: 400; color: #1B65B9; display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-box-orient: horizontal; -webkit-box-direction: normal; -webkit-flex-direction: row; -ms-flex-direction: row; flex-direction: row; -webkit-box-align: center; -webkit-align-items: center; -ms-flex-align: center; align-items: center; -webkit-box-pack: start; -webkit-justify-content: flex-start; -ms-flex-pack: start; justify-content: flex-start; margin-top: 3rem; max-width: 20rem; }
 
 .link--add svg { width: 2rem; height: 2rem; display: block; margin-right: 1rem; }
@@ -5813,6 +5815,8 @@ p { font-family: "Open Sans"; color: #000000; font-size: 1.8rem; font-weight: 40
 .link--top:hover svg path { stroke: #1B65B9; }
 
 .btn { -webkit-transition: 0.24s ease-in; -o-transition: 0.24s ease-in; transition: 0.24s ease-in; display: block; font-family: "Open Sans"; cursor: pointer; background-color: transparent; border: none; -webkit-appearance: none; }
+
+.btn--search { display: none; }
 
 .btn--more { background: #fff; -webkit-border-bottom-left-radius: 8px; border-bottom-left-radius: 8px; max-width: 50%; width: 100%; text-align: center; padding: 1.9rem 0; font-weight: 700; font-size: 1.8rem; color: #5B636A; }
 
