--- a/css/media.css
+++ b/css/media.css
@@ -19,6 +19,11 @@
   html { font-size: 10px; }
   body.bg-main { background: url(../img/patternmob.png) repeat top 0 center; -webkit-background-size: auto auto; background-size: auto; }
   .title--h1 { font-size: 3.6rem; line-height: 4rem; }
+  .link--close { width: 1.4rem; height: 1.4rem; }
+  .link--close svg { display: block; width: 100%; height: 100%; }
+  .link--close svg path { fill: #5B636A; }
+  .link--back { position: absolute; top: 1.5rem; left: 1.5rem; display: block; width: 1.6rem; height: 1.6rem; }
+  .link--back svg { display: block; width: 100%; }
   .link--toggle { width: 1.8rem; height: 1.2rem; }
   .link--toggle svg { display: block; width: 100%; height: 100%; }
   .link--toggle svg path { -webkit-transform-origin: center center; -ms-transform-origin: center center; transform-origin: center center; fill: #fff; -webkit-transition: 0.24s ease-in; -o-transition: 0.24s ease-in; transition: 0.24s ease-in; }
@@ -79,13 +84,14 @@
   .section-reviews .reviews-slide__block .star-row { margin-top: .75rem; }
   .section-reviews .reviews-slide__name .paragraph { font-size: 1.6rem; }
   .section-reviews .reviews-slide__left { width: 100%; padding-left: 0; }
+  .section-reviews .reviews-slide__left .link { margin-top: 1.5rem; }
   .section-reviews .reviews-slide__left .doctor { -webkit-box-orient: horizontal; -webkit-box-direction: reverse; -webkit-flex-direction: row-reverse; -ms-flex-direction: row-reverse; flex-direction: row-reverse; }
   .section-reviews .reviews-slide__left .doctor-info { width: 100%; max-width: 100%; padding-left: 2rem; }
-  .section-reviews .reviews-slide__left .doctor-photo { max-width: 10rem; -webkit-border-radius: 8px; border-radius: 8px; overflow: hidden; }
+  .section-reviews .reviews-slide__left .doctor-photo { height: 10rem; max-width: 10rem; -webkit-border-radius: 8px; border-radius: 8px; overflow: hidden; }
   .section-reviews .reviews-slide__left .doctor-photo .paragraph { display: none; }
   .section-reviews .reviews-slide__left .doctor-rate { display: none; }
   .section-reviews .reviews-slide__left .doctor-pos { -webkit-box-ordinal-group: 3; -webkit-order: 2; -ms-flex-order: 2; order: 2; display: none; }
-  .section-reviews .reviews-slide__content { -webkit-box-orient: vertical; -webkit-box-direction: normal; -webkit-flex-direction: column; -ms-flex-direction: column; flex-direction: column; }
+  .section-reviews .reviews-slide__content { padding-bottom: .5rem; -webkit-box-orient: vertical; -webkit-box-direction: normal; -webkit-flex-direction: column; -ms-flex-direction: column; flex-direction: column; }
   .section-deal { display: none; }
   .section-partners { padding: 0 0 3rem 0; }
   .section-partners .partners-items { -webkit-flex-wrap: wrap; -ms-flex-wrap: wrap; flex-wrap: wrap; padding: 0; }
@@ -121,8 +127,123 @@
   .section-mobile .mobile-btns .link svg { display: block; width: 3.2rem; margin-right: 1rem; }
   .section-mobile .mobile-btns .link span { display: block; font-size: 1.6rem; }
   .section-mobile .mobile-btns .link + .link { margin-left: 1.5rem; }
+  .section-mobile .mobile-btns .link:only-child { max-width: 100%; }
   .section-mobile .mobile-menu { padding: 1.5rem 0; margin: 0; list-style: none; }
-  .section-mobile .mobile-menu li .link { padding: 1.5rem 1rem; font-size: 1.8rem; text-transform: uppercase; line-height: 1; } }
+  .section-mobile .mobile-menu li .link { padding: 1.5rem 1rem; font-size: 1.8rem; text-transform: uppercase; line-height: 1; }
+  .section-accept { padding: 6rem 0; }
+  .section-reg .reg-form { position: relative; padding: 3rem 1.5rem 2rem 1.5rem; }
+  .section-reg .reg-form__head .paragraph { font-size: 1.8rem; }
+  .section-reg .reg-form form { margin-top: 5rem; }
+  .section-reg .reg-form .form-col .form-check { margin-bottom: 2rem; }
+  .section-reg .reg-form .form-row { -webkit-box-orient: vertical; -webkit-box-direction: normal; -webkit-flex-direction: column; -ms-flex-direction: column; flex-direction: column; }
+  .section-reg .reg-form .form-row.special .form-col:nth-child(1) { margin-bottom: 2rem; }
+  .section-reg .reg-form .form-block { margin-bottom: 5rem; }
+  .section-reg .reg-form .form-block__phone .link--add { margin-top: 3rem; }
+  .section-reg .reg-form .form-block:last-child { margin-bottom: 0; }
+  .section-about { padding-bottom: 6rem; min-height: initial; }
+  .section-about .partners { margin: 6rem 0 6rem 0; }
+  .section-about .partners-items { -webkit-flex-wrap: wrap; -ms-flex-wrap: wrap; flex-wrap: wrap; padding: 0; }
+  .section-about .partners-item { max-width: 50%; width: 100%; margin-bottom: 6rem; }
+  .section-about .partners-item img { margin: 0 auto; max-width: 11rem; width: auto; }
+  .section-about .partners-item:last-child { margin-bottom: 0; }
+  .section-about .partners-item:nth-last-child(2) { margin-bottom: 0; }
+  .section-about .about .title--h2 { font-size: 2.4rem; }
+  .section-about .about-form h2.title--h2 { font-size: 1.8rem; line-height: 3rem; }
+  .section-about .about-form p.title { display: none; }
+  .section-about .about-form .btn--search { display: block; margin: 2rem auto 0 auto; }
+  .section-about .about-exert { margin: 3rem 0; padding: 2rem 1.5rem; background: #fff; }
+  .section-about .about-exert p.title--h2 { font-size: 2rem; line-height: 3.4rem; margin-bottom: 1.5rem; }
+  .section-about .about-text { margin-top: 1.5rem; }
+  .section-about .about-text .paragraph { font-size: 1.6rem; line-height: 2.4rem; }
+  .section-about .stat { margin: 0; padding: 3rem 0; }
+  .section-about .stat-items { margin-top: 3rem; -webkit-box-orient: vertical; -webkit-box-direction: normal; -webkit-flex-direction: column; -ms-flex-direction: column; flex-direction: column; }
+  .section-about .stat-item .title--h1 { font-size: 6.4rem; line-height: 1; }
+  .section-about .stat-item:nth-child(2) { margin: 3rem 0; }
+  .section-article { padding-bottom: 3rem; }
+  .section-article .article-recent { margin-top: 3rem; -webkit-box-orient: vertical; -webkit-box-direction: normal; -webkit-flex-direction: column; -ms-flex-direction: column; flex-direction: column; }
+  .section-article .article-recent__item { margin-bottom: 3rem; }
+  .section-article .article-recent__item .paragraph { line-height: 2.4rem; }
+  .section-article .article-recent__item:last-child { margin-bottom: 0; }
+  .section-article .article .title--h3 { font-size: 1.8rem; }
+  .section-article .article .paragraph { font-size: 1.6rem; }
+  .section-article .article-content .paragraph { font-size: 1.6rem; line-height: 2.4rem; }
+  .section-article .article-content .paragraph + .paragraph { margin-top: 1.8rem; }
+  .section-article .article-content .banner { padding: 3rem 0; -webkit-box-orient: vertical; -webkit-box-direction: normal; -webkit-flex-direction: column; -ms-flex-direction: column; flex-direction: column; }
+  .section-article .article-content .banner .link + .link { margin-top: 1.5rem; }
+  .section-blog { padding-bottom: 3rem; min-height: initial; }
+  .section-blog .blog .pagination { margin-top: 3rem; }
+  .section-blog .blog .banner { display: none; }
+  .section-blog .blog-items:not(:first-child) { margin-top: 3rem; }
+  .section-blog .blog-item { -webkit-box-orient: vertical; -webkit-box-direction: normal; -webkit-flex-direction: column; -ms-flex-direction: column; flex-direction: column; margin-bottom: 3rem; }
+  .section-blog .blog-item:last-child { margin-bottom: 0; }
+  .section-blog .blog-item__content .title--h3 { font-size: 1.8rem; margin: 1rem 0 1.5rem 0; }
+  .section-blog .blog-item__content .paragraph { font-size: 1.6rem; line-height: 2.4rem; }
+  .section-blog .blog-item__img { margin-bottom: 1.5rem; }
+  .section-contact { padding-bottom: 3rem; }
+  .section-contact .contact { -webkit-box-orient: vertical; -webkit-box-direction: normal; -webkit-flex-direction: column; -ms-flex-direction: column; flex-direction: column; }
+  .section-contact .contact-map { margin-bottom: 3rem; }
+  .section-contact .contact-map__item { width: 100%; }
+  .section-contact .contact-map__item + .contact-map__item { margin-left: 0; margin-top: 3rem; }
+  .section-contact .contact-map__row { -webkit-box-orient: vertical; -webkit-box-direction: normal; -webkit-flex-direction: column; -ms-flex-direction: column; flex-direction: column; }
+  .section-faq { padding-bottom: 3rem; min-height: initial; }
+  .section-faq .faq-item { padding-bottom: 1.5rem; margin-bottom: 1.5rem; }
+  .section-faq .faq-item__head { padding: 0 2rem 0 0; }
+  .section-faq .faq-item__head h3 { font-size: 1.8rem; }
+  .section-faq .faq-item__content { padding-left: 0; }
+  .section-faq .faq-item__content .paragraph { font-size: 1.6rem; line-height: 2.4rem; }
+  .section-doctorpage .doctorpage-info { padding-bottom: 3rem; }
+  .section-doctorpage .doctorpage-info__top { -webkit-box-orient: vertical; -webkit-box-direction: normal; -webkit-flex-direction: column; -ms-flex-direction: column; flex-direction: column; margin-bottom: 1.5rem; }
+  .section-doctorpage .doctorpage-info__form { margin-left: 0; max-width: 100%; }
+  .section-doctorpage .doctorpage-info__credits { width: 100%; padding: 3rem 1.5rem 1.5rem 1.5rem; margin: 0 0 1.5rem 0; background: #fff; -webkit-border-radius: 8px; border-radius: 8px; }
+  .section-doctorpage .doctorpage-info__bottom { width: 100%; padding: 3rem 1.5rem 1.5rem 1.5rem; margin: 0 0 0 0; background: #fff; -webkit-border-radius: 8px; border-radius: 8px; }
+  .section-doctorpage .doctorpage-info__bottom .paragraph { font-size: 1.6rem; }
+  .section-doctorpage .doctorpage-banner { display: none; }
+  .section-doctorpage .doctorpage-reviews { -webkit-box-orient: vertical; -webkit-box-direction: normal; -webkit-flex-direction: column; -ms-flex-direction: column; flex-direction: column; -webkit-box-align: start; -webkit-align-items: flex-start; -ms-flex-align: start; align-items: flex-start; }
+  .section-doctorpage .doctorpage-reviews__btn { -webkit-box-orient: vertical; -webkit-box-direction: normal; -webkit-flex-direction: column; -ms-flex-direction: column; flex-direction: column; -webkit-box-align: center; -webkit-align-items: center; -ms-flex-align: center; align-items: center; }
+  .section-doctorpage .doctorpage-reviews__btn .link { position: static; -webkit-transform: none; -ms-transform: none; transform: none; margin-top: 3rem; }
+  .section-doctorpage .doctorpage-reviews__block { max-width: 100%; width: 100%; }
+  .section-doctorpage .doctorpage-reviews__block .star-row { margin-right: .5rem; }
+  .section-find { padding-bottom: 3rem; min-height: initial; }
+  .section-find.oth .find .pagination { margin-top: 3rem; }
+  .section-find.oth .find .banner { margin: 3rem 0 0 0; -webkit-box-orient: vertical; -webkit-box-direction: normal; -webkit-flex-direction: column; -ms-flex-direction: column; flex-direction: column; }
+  .section-find.oth .find .banner .link { width: 100%; }
+  .section-find.oth .find .banner .link + .link { margin-top: 1.5rem; }
+  .section-find .find .find-filter { margin: 3rem 0; -webkit-box-orient: vertical; -webkit-box-direction: normal; -webkit-flex-direction: column; -ms-flex-direction: column; flex-direction: column; -webkit-box-align: center; -webkit-align-items: center; -ms-flex-align: center; align-items: center; }
+  .section-find .find .find-filter__side { margin-top: 3rem; width: 100%; }
+  .section-find .find .find-filter__side .form-block { max-width: 100%; width: 100%; }
+  .section-find .find .find-filter__side .link--filter { display: none; }
+  .section-find .find .find-form h2 { font-size: 1.8rem; line-height: 3rem; }
+  .section-find .find .find-form p.title--h2 { display: none; }
+  .section-find .find .find-form .btn { display: block; margin: 0 auto; }
+  .section-find .find .banner { margin: 3rem 0 3rem 0; -webkit-box-orient: vertical; -webkit-box-direction: normal; -webkit-flex-direction: column; -ms-flex-direction: column; flex-direction: column; }
+  .section-find .find .banner .link { width: 100%; }
+  .section-find .find .banner .link + .link { margin-top: 1.5rem; }
+  .section-find .find .pagination { margin-top: 3rem; }
+  .section-find .find-item { margin-bottom: 1.5rem; }
+  .section-find .find-item:nth-last-child(2) { margin-bottom: 1.5rem; }
+  .section-find .find-item:nth-last-child(3) { margin-bottom: 1.5rem; }
+  .section-find .find-item .doctor-bottom .paragraph.sm { margin-top: 2.5rem; }
+  .section-find .find-item .doctor-info .doctor-pos { margin-top: 1rem; }
+  .section-find .find-item .doctor-photo { height: 16rem; max-width: 15.5rem; }
+  .section-find .find-item .doctor-head { -webkit-box-align: start; -webkit-align-items: flex-start; -ms-flex-align: start; align-items: flex-start; }
+  .datepickers-container { z-index: 14; }
+  .breabcrumbs { margin: 3rem 0; }
+  .breabcrumbs .link { padding-right: 1rem; }
+  .breabcrumbs .link:nth-child(1) { padding-left: 3rem; background: url(../img/bg/back.svg) no-repeat center left; -webkit-background-size: 1.6rem 1.6rem; background-size: 1.6rem 1.6rem; }
+  .breabcrumbs .link:not(:first-child) { padding-left: 1.5rem; }
+  .breabcrumbs .link.current { display: none; }
+  .form-overlay { opacity: 0; visibility: hidden; -webkit-transform-origin: center center; -ms-transform-origin: center center; transform-origin: center center; -webkit-transform: translateX(-100%); -ms-transform: translateX(-100%); transform: translateX(-100%); z-index: -1; position: fixed; top: 0; padding: 0 1.5rem; display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-box-orient: horizontal; -webkit-box-direction: normal; -webkit-flex-direction: row; -ms-flex-direction: row; flex-direction: row; -webkit-box-align: center; -webkit-align-items: center; -ms-flex-align: center; align-items: center; -webkit-box-pack: center; -webkit-justify-content: center; -ms-flex-pack: center; justify-content: center; left: 0; width: 100%; -webkit-transition: opacity 0.24s ease-in, visibility 0.24s ease-in; -o-transition: opacity 0.24s ease-in, visibility 0.24s ease-in; transition: opacity 0.24s ease-in, visibility 0.24s ease-in; height: 100vh; background: rgba(35, 31, 32, 0.55); }
+  .form-overlay.open { opacity: 1; visibility: visible; -webkit-transform: translateX(0); -ms-transform: translateX(0); transform: translateX(0); z-index: 12; }
+  .form-page { background: #fff; -webkit-border-radius: 8px; border-radius: 8px; padding: 3rem; }
+  .form-page .btn { width: 100%; max-width: 100%; }
+  .form-page__mob { display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-box-orient: horizontal; -webkit-box-direction: normal; -webkit-flex-direction: row; -ms-flex-direction: row; flex-direction: row; -webkit-box-align: center; -webkit-align-items: center; -ms-flex-align: center; align-items: center; -webkit-box-pack: justify; -webkit-justify-content: space-between; -ms-flex-pack: justify; justify-content: space-between; margin-bottom: 5rem; width: 100%; }
+  .form-page__mob h3 { font-size: 1.8rem; }
+  .form-page .form-check { margin: 3rem 0; }
+  .form-page .form-block { margin-right: 0; width: 100%; margin-bottom: 5rem; }
+  .form-page .form-block:last-child { margin-bottom: 0; }
+  .form-page .form-rows { -webkit-box-orient: vertical; -webkit-box-direction: normal; -webkit-flex-direction: column; -ms-flex-direction: column; flex-direction: column; }
+  .form-page .form-row { width: 100%; -webkit-box-orient: vertical; -webkit-box-direction: normal; -webkit-flex-direction: column; -ms-flex-direction: column; flex-direction: column; }
+  .form-page .form-row + .form-row { margin-top: 5rem; } }
 
 @media only screen and (max-width: 330px) { /**/
   html { font-size: 9px; } }
