--- a/css/main.css
+++ b/css/main.css
@@ -6062,7 +6062,7 @@ p { font-family: "Open Sans"; color: #000000; font-size: 1.8rem; font-weight: 40
 
 .section-main .main .title--h2 { margin-top: 1rem; }
 
-.section-reg { padding: 10rem 0 8rem 0; }
+.section-reg { padding: 10rem 0 8rem 0; min-height: 80vh; }
 
 .section-reg .reg-form { padding: 3.5rem 10.5rem 5rem 10.5rem; background: #FFFFFF; -webkit-border-radius: 13px; border-radius: 13px; max-width: 101rem; width: 100%; margin: 0 auto; -webkit-box-shadow: 0px 4px 50px rgba(0, 0, 0, 0.2); box-shadow: 0px 4px 50px rgba(0, 0, 0, 0.2); }
 
@@ -6197,6 +6197,22 @@ p { font-family: "Open Sans"; color: #000000; font-size: 1.8rem; font-weight: 40
 .section-partners .partners-item:last-child { height: 5.2rem; }
 
 .section-record { padding: 12rem 0 16rem 0; }
+
+.section-record .record-text { width: 100%; height: 15rem; overflow: hidden; }
+
+.section-record .record-text.active { height: 100%; }
+
+.section-record .record .btn { margin: 3rem auto 0 auto; }
+
+.section-record .record .btn span { display: block; }
+
+.section-record .record .btn span.active-text { display: none; }
+
+.section-record .record .btn span.text { display: block; }
+
+.section-record .record .btn.active .text { display: none; }
+
+.section-record .record .btn.active .active-text { display: block; }
 
 .section-record .record h3 { margin-bottom: 1rem; }
 
