--- a/css/media.css
+++ b/css/media.css
@@ -93,12 +93,10 @@
   .section-reviews .reviews-slide__left .doctor-pos { -webkit-box-ordinal-group: 3; -webkit-order: 2; -ms-flex-order: 2; order: 2; display: none; }
   .section-reviews .reviews-slide__content { padding-bottom: .5rem; -webkit-box-orient: vertical; -webkit-box-direction: normal; -webkit-flex-direction: column; -ms-flex-direction: column; flex-direction: column; }
   .section-deal { display: none; }
-  .section-partners { padding: 0 0 3rem 0; }
+  .section-partners { padding: 0 0 0 0; }
   .section-partners .partners-items { -webkit-flex-wrap: wrap; -ms-flex-wrap: wrap; flex-wrap: wrap; padding: 0; }
   .section-partners .partners-item { max-width: 50%; width: 100%; margin-bottom: 6rem; }
   .section-partners .partners-item img { margin: 0 auto; max-width: 11rem; width: auto; }
-  .section-partners .partners-item:last-child { margin-bottom: 0; }
-  .section-partners .partners-item:nth-last-child(2) { margin-bottom: 0; }
   .section-record { padding: 6rem 0; }
   .section-footer { padding: 3rem 0 1.5rem 0; }
   .section-footer .footer-row { margin-top: 0; -webkit-box-orient: vertical; -webkit-box-direction: normal; -webkit-flex-direction: column; -ms-flex-direction: column; flex-direction: column; -webkit-box-align: center; -webkit-align-items: center; -ms-flex-align: center; align-items: center; -webkit-box-pack: center; -webkit-justify-content: center; -ms-flex-pack: center; justify-content: center; }
@@ -141,12 +139,10 @@
   .section-reg .reg-form .form-block__phone .link--add { margin-top: 3rem; }
   .section-reg .reg-form .form-block:last-child { margin-bottom: 0; }
   .section-about { padding-bottom: 6rem; min-height: initial; }
-  .section-about .partners { margin: 6rem 0 6rem 0; }
+  .section-about .partners { margin: 6rem 0 0 0; }
   .section-about .partners-items { -webkit-flex-wrap: wrap; -ms-flex-wrap: wrap; flex-wrap: wrap; padding: 0; }
   .section-about .partners-item { max-width: 50%; width: 100%; margin-bottom: 6rem; }
   .section-about .partners-item img { margin: 0 auto; max-width: 11rem; width: auto; }
-  .section-about .partners-item:last-child { margin-bottom: 0; }
-  .section-about .partners-item:nth-last-child(2) { margin-bottom: 0; }
   .section-about .about .title--h2 { font-size: 2.4rem; }
   .section-about .about-form h2.title--h2 { font-size: 1.8rem; line-height: 3rem; }
   .section-about .about-form p.title { display: none; }
