--- a/css/main.css
+++ b/css/main.css
@@ -6772,6 +6772,24 @@ p { font-family: "Open Sans"; color: #000000; font-size: 1.8rem; font-weight: 40
 
 .popup-thanks .thanks-footer img { margin: 0 auto 3.5rem auto; }
 
+.popup-formreq { padding: 0 0 0 0; background: #FFFFFF; -webkit-box-shadow: 0px 4px 50px rgba(0, 0, 0, 0.2); box-shadow: 0px 4px 50px rgba(0, 0, 0, 0.2); -webkit-border-radius: 13px; border-radius: 13px; max-width: 34rem; width: 100%; }
+
+.popup-formreq .doctorpage-info__form { margin-left: auto; }
+
+.popup-formreq .doctorpage-info__form .form { padding: 3.5rem 3rem 3rem 3rem; }
+
+.popup-formreq .doctorpage-info__form .form-block { margin-bottom: 3rem; }
+
+.popup-formreq .doctorpage-info__form .form-block:last-child { margin-bottom: 3.5rem; }
+
+.popup-formreq .doctorpage-info__form .form-rows { -webkit-box-orient: vertical; -webkit-box-direction: normal; -webkit-flex-direction: column; -ms-flex-direction: column; flex-direction: column; -webkit-box-align: start; -webkit-align-items: flex-start; -ms-flex-align: start; align-items: flex-start; -webkit-box-pack: start; -webkit-justify-content: flex-start; -ms-flex-pack: start; justify-content: flex-start; display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; }
+
+.popup-formreq .doctorpage-info__form .btn { margin: 0 auto; max-width: 100%; }
+
+.popup-formreq .doctorpage-info__form .find-form { -webkit-border-radius: 8px; border-radius: 8px; max-width: 34rem; width: 100%; background: #fff; -webkit-box-shadow: 0px 4px 50px rgba(0, 0, 0, 0.2); box-shadow: 0px 4px 50px rgba(0, 0, 0, 0.2); }
+
+.popup-formreq .doctorpage-info__form .find-form .paragraph { text-align: center; background: #1B65B9; -webkit-border-radius: 8px 8px 0 0; border-radius: 8px 8px 0 0; padding: 1.8rem 0; }
+
 .popup-review { padding: 5rem 1rem 7rem 1rem; background: #FFFFFF; -webkit-box-shadow: 0px 4px 50px rgba(0, 0, 0, 0.2); box-shadow: 0px 4px 50px rgba(0, 0, 0, 0.2); -webkit-border-radius: 13px; border-radius: 13px; max-width: 59.5rem; width: 100%; }
 
 .popup-review .review-stars { margin: 3rem auto 5rem auto; max-width: 47rem; width: 100%; display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-box-orient: horizontal; -webkit-box-direction: reverse; -webkit-flex-direction: row-reverse; -ms-flex-direction: row-reverse; flex-direction: row-reverse; -webkit-box-align: start; -webkit-align-items: flex-start; -ms-flex-align: start; align-items: flex-start; -webkit-box-pack: justify; -webkit-justify-content: space-between; -ms-flex-pack: justify; justify-content: space-between; }
