--- a/css/main.css
+++ b/css/main.css
@@ -5738,6 +5738,8 @@ p { font-family: "Open Sans"; color: #000000; font-size: 1.8rem; font-weight: 40
 
 .link--info svg { margin-right: 1.2rem; width: 1.4rem; display: block; }
 
+.link--info span { max-width: 90%; }
+
 .link--info.ph svg { width: 1.3rem; }
 
 .link--filter { width: 1.7rem; height: 1.4rem; }
@@ -5870,7 +5872,7 @@ p { font-family: "Open Sans"; color: #000000; font-size: 1.8rem; font-weight: 40
 
 .select .jq-selectbox__select.error { border-color: red; }
 
-.select .jq-selectbox__select-text { width: 100%; font-weight: 400; font-size: 1.8rem; color: #231F20; }
+.select .jq-selectbox__select-text { width: 100%; font-weight: 400; padding-right: 2.5rem; font-size: 1.8rem; color: #231F20; }
 
 .select .jq-selectbox.focused .jq-selectbox__select { outline: none; border: none; border-bottom: 1px solid #1B65B9; }
 
@@ -5930,9 +5932,9 @@ p { font-family: "Open Sans"; color: #000000; font-size: 1.8rem; font-weight: 40
 
 .select--city .jq-selectbox__dropdown { min-width: 20rem; }
 
-.select--place .jq-selectbox__dropdown { margin: 0; -webkit-box-shadow: 0px 4px 50px rgba(0, 0, 0, 0.2); box-shadow: 0px 4px 50px rgba(0, 0, 0, 0.2); -webkit-border-radius: 0px 0px 8px 8px; border-radius: 0px 0px 8px 8px; background: #fff; border: none; font: initial; }
+.select--place .jq-selectbox__dropdown { max-width: 100%; margin: 0; -webkit-box-shadow: 0px 4px 50px rgba(0, 0, 0, 0.2); box-shadow: 0px 4px 50px rgba(0, 0, 0, 0.2); -webkit-border-radius: 0px 0px 8px 8px; border-radius: 0px 0px 8px 8px; background: #fff; border: none; font: initial; }
 
-.select--place .jq-selectbox__dropdown li { padding: 1.5rem 2rem; font-size: 1.8rem; font-family: "Open Sans"; font-weight: 400; color: #5B636A; }
+.select--place .jq-selectbox__dropdown li { white-space: initial; padding: 1.5rem 2rem; font-size: 1.8rem; font-family: "Open Sans"; font-weight: 400; color: #5B636A; }
 
 .select--place .jq-selectbox__dropdown li.selected { color: #5B636A; background: transparent; }
 
@@ -6076,7 +6078,11 @@ p { font-family: "Open Sans"; color: #000000; font-size: 1.8rem; font-weight: 40
 
 .section-reg .reg-form .form-row.special .form-check { min-height: 3rem; display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-box-orient: horizontal; -webkit-box-direction: normal; -webkit-flex-direction: row; -ms-flex-direction: row; flex-direction: row; -webkit-box-align: center; -webkit-align-items: center; -ms-flex-align: center; align-items: center; -webkit-box-pack: justify; -webkit-justify-content: space-between; -ms-flex-pack: justify; justify-content: space-between; }
 
-.section-reg .reg-form .form-row.special .form-check .price--spec { max-width: 10rem; font-size: 1.6rem; padding-top: 0; -webkit-transition: initial; -o-transition: initial; transition: initial; display: none; margin-top: 0; }
+.section-reg .reg-form .form-row.special .form-check .price--spec { max-width: 7rem; font-size: 1.6rem; padding-top: 0; -webkit-transition: initial; -o-transition: initial; transition: initial; margin-top: 0; }
+
+.section-reg .reg-form .form-row.special .form-check .field--val { max-width: initial; width: auto; font-size: 1.6rem; padding-top: 0; -webkit-transition: initial; -o-transition: initial; transition: initial; margin-top: 0; }
+
+.section-reg .reg-form .form-row.special .form-check .field[disabled] { border: none; }
 
 .section-reg .reg-form .form-row + .form-row { margin-top: 0; }
 
@@ -6315,6 +6321,8 @@ p { font-family: "Open Sans"; color: #000000; font-size: 1.8rem; font-weight: 40
 .section-about .stat-item:nth-child(2) { margin: 0 9.5rem; }
 
 .section-doctorpage { padding-top: 6rem; padding-bottom: 6rem; }
+
+.section-doctorpage .doctorpage-info + .doctorpage { padding-top: 5rem; }
 
 .section-doctorpage .doctorpage-info__photo { -webkit-border-radius: 8px; border-radius: 8px; overflow: hidden; max-width: 39rem; width: 100%; height: 53rem; }
 
