--- a/css/media.css
+++ b/css/media.css
@@ -5,7 +5,9 @@
 @media only screen and (max-width: 1400px) { /**/
   html { font-size: 9.5px; } }
 
-@media only screen and (max-width: 1300px) { /**/ }
+@media only screen and (max-width: 1300px) { /**/
+  html { font-size: 7.5px; }
+  .section-main { -webkit-background-size: auto 50vh, 30rem 43.7rem, cover; background-size: auto 50vh, 30rem 43.7rem, cover; } }
 
 @media only screen and (max-width: 1200px) { /**/ }
 
